--- a/index.html
+++ b/index.html
@@ -355,27 +355,40 @@
 					</div>
 				</div>
 			</form>
-			<button type="button" class="close-button">Закрыть</a>
+			<button type="button" class="close-button" id="latter-close">Закрыть</a>
 		</div>
 		<div class="modal-content-map">
-			<button class="close-button" type="button">Закрыть</button>
+			<button class="close-button" type="button" id="map-close">Закрыть</button>
 			<div class="yandex-map">
 				<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=eAOOQfasTfmS9O9nxgtSJ28ZPD-aK3Os&amp;width=940&amp;height=447&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
 			</div>
 		</div>
 		<script>
-			var link = document.querySelector(".map-button");
-			var popup = document.querySelector(".modal-content-map");
-			var	close = document.querySelector(".close-button");	
+			var linkLatter = document.querySelector(".map-button");
+			var linkMap = document.querySelector(".map");
+			var latter = document.querySelector(".modal-write-us");
+			var map = document.querySelector(".modal-content-map")
+			var	closeLatter = document.getElementById(["latter-close"]);
+			var	closeMap = document.getElementById(["map-close"]);	
 
-			link.addEventListener("click", function(event){
+			linkLatter.addEventListener("click", function(event){
 				event.preventDefault();
-				popup.classList.add("modal-content-show");
+				latter.classList.add("modal-content-show");
 			});
 
-			close.addEventListener("click", function(event) {
+			linkMap.addEventListener("click", function(event){
+				event.preventDefault();
+				map.classList.add("modal-content-show");
+			});
+
+			closeLatter.addEventListener("click", function(event) {
         		event.preventDefault();
-        		popup.classList.remove("modal-content-show");
+        		latter.classList.remove("modal-content-show");
+      		});
+
+      		closeMap.addEventListener("click", function(event) {
+        		event.preventDefault();
+        		map.classList.remove("modal-content-show");
       		});
 		</script>
 	</body>
