--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 					</div>
 				</div>
 			</form>
-			<button type="button" class="close-button" id="latter-close">Закрыть</a>
+			<button type="button" class="close-button" id="latter-close">Закрыть</button>
 		</div>
 		<div class="modal-content-map">
 			<button class="close-button" type="button" id="map-close">Закрыть</button>
