Исправлены отступы блоков на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="contacts-header">
                     <p class="phone-number">+7 (812) 555-05-55</p>
-                    <p class="adress-header">г. Санкт-Петербург, ул. Конюшенная, д.19/8</p>
+                    <p class="adress-header">г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
                 </div>
                 <div class="user-cab">
                     <a class="user-name" href="#"><i class="icon-user"></i>Равшан Джамшутович<i class="icon-logout"></i></a>
