--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 				<div class="contacts-header">
 					<p class="phone-number">+7 (812) 555-05-55</p>
-					<p class="adress-header">г. Санкт-Петербург, ул. Конюшенная, д.19/8</p>
+					<p class="adress-header">г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
 				</div>
 				<div class="user-block">
 					<a class="login" href="#"><i class=icon-login></i><span>Войти</span></a>
@@ -246,7 +246,7 @@
 				</div>
 			</div>
 			<div class="container clearfix">
-				<section class="about-company">
+				<section class="about-company clearfix">
 					<div class="about-company-left">
 						<h2>Компания «Техномарт»</h2>
 						<p>Настоящий мужской шоппинг начинается здесь. Огромный выбор товаров для ремонта и<br> строительства не оставит равнодушными любителей сэкономить на гастарбайтерах</p>
