Исправлены отступы и размеры блоков

--- a/catalog.html
+++ b/catalog.html
@@ -67,8 +67,8 @@
         <main>
             <div class="container clearfix">
                 <ul class="breadcrumbs">
-                    <li>
-                        <a href="#"><i class="icon-home"></i></a>
+                    <li class="icon-home">
+                        <a href="#"></a>
                     </li>
                     <li class="icon-right">
                         <a href="#">Каталог</a>
