Изменение отступов в коде везде до 4 пробелов
Также добавил meta запрет для распознования номеров телефонов и адресов

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>HTML Academy: Техномарт</title>
         <meta name="description" content="Репозиторий создан для обучения на интенсивном онлайн‑курсе Базовый HTML и CSS">
+        <meta name="format-detection" content="telephone=no"/>
+        <meta name="format-detection" content="address=no"/>
         <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
