Добавлена ссылка на главную в breadcrumbs

--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
                     </div>
                     <div class="email-box">
                         <label>Ваш e-mail:
-                            <input type="text" name="your-email" placeholder="Для отправки ответа">
+                            <input type="text" name="your-email" placeholder="Для отправки ответа" required="">
                         </label>
                     </div>
                     <div class="latter-box">
                         <label>Текст письма:
-                            <textarea name="your-latter" placeholder="В свободной форме" rows="5"></textarea>
+                            <textarea name="your-latter" placeholder="В свободной форме" rows="5" required=""></textarea>
                         </label>
                     </div>
                 </div>
