Одинаковое форматирование в обоих страницах

--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
                         <input type="text" name="search" id="search-id" placeholder="Поиск:">
                         <label class="icon-search" for="search-id"></label>
                     </form>
-                    <a class="bookmark" href="#">
-                        <i class="icon-bookmark"></i>Закладки: <span class=bookmark-counter>0</span>
-                    </a>
-                    <a class="basket" href="#">
-                        <i class="icon-basket"></i>Корзина: <span class=basket-counter>0</span>
-                    </a>
+                    <a class="bookmark" href="#"><i class="icon-bookmark"></i>Закладки: <span class=bookmark-counter>0</span></a>
+                    <a class="basket" href="#"><i class="icon-basket"></i>Корзина: <span class=basket-counter>0</span></a>
                     <a class="checkout-order" href="#">Оформить заказ</a>
                 </div>
             </div>
